--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
+    "bitcoind-rpc": "^0.8.1",
     "config": "^3.2.2",
+    "cryptoapi-lib": "0.0.1-rc.3",
     "echojs-lib": "^1.6.2",
     "log4js": "^5.1.0",
     "raven": "^2.6.4",
